cmake_minimum_required(VERSION 3.6)
add_library(tutorial_compiler_flags INTERFACE)
target_compile_features(tutorial_compiler_flags INTERFACE cxx_std_20)
project(parser LANGUAGES CXX)
#include_directories(src/algorithm/ src/base)
add_executable(parserTool src/base/main.cpp src/base/BasicNode.cpp src/algorithm/unger.cpp src/base/GramTable.cpp src/algorithm/CYK.cpp)
add_library(parser src/base/BasicNode.cpp src/algorithm/unger.cpp src/base/GramTable.cpp src/algorithm/CYK.cpp)
#target_compile_options(parser PRIVATE "-stdlib=libc++")
#target_compile_options(parserTool PRIVATE "-stdlib=libc++")
##target_link_options(parser PRIVATE "-stdlib=libc++")
#target_link_options(parserTool PRIVATE "-stdlib=libc++")
target_include_directories(parser PUBLIC src/algorithm/ src/base)
target_link_libraries(parser PUBLIC tutorial_compiler_flags)
target_include_directories(parserTool PUBLIC src/algorithm/ src/base)
target_link_libraries(parserTool PUBLIC tutorial_compiler_flags)
add_subdirectory(test/gramTableTest)
add_subdirectory(test/ungerTest)
add_subdirectory(test/CYKTest)