cmake_minimum_required(VERSION 3.6)
add_library(tutorial_compiler_flags INTERFACE)
target_compile_features(tutorial_compiler_flags INTERFACE cxx_std_23)
project(parser LANGUAGES CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")

add_executable(parserTool src/base/main.cpp src/base/BasicNode.cpp src/algorithm/unger.cpp src/base/GramTable.cpp src/base/graph.cpp src/base/DFA.cpp src/base/NFA.cpp src/algorithm/CYK.cpp src/algorithm/RegExpr.cpp src/algorithm/chartTable.cpp)
add_library(parser src/base/BasicNode.cpp src/algorithm/unger.cpp src/base/GramTable.cpp src/base/graph.cpp src/base/DFA.cpp src/base/NFA.cpp src/algorithm/CYK.cpp src/algorithm/RegExpr.cpp src/algorithm/chartTable.cpp)
#target_compile_options(parser PRIVATE "-stdlib=libc++")
#target_compile_options(parserTool PRIVATE "-stdlib=libc++")
##target_link_options(parser PRIVATE "-stdlib=libc++")
#target_link_options(parserTool PRIVATE "-stdlib=libc++")
target_include_directories(parser PUBLIC src/algorithm/ src/base)
target_link_libraries(parser PUBLIC tutorial_compiler_flags)
target_include_directories(parserTool PUBLIC src/algorithm/ src/base)
target_link_libraries(parserTool PUBLIC tutorial_compiler_flags)
add_subdirectory(test/gramTableTest)
add_subdirectory(test/ungerTest)
add_subdirectory(test/CYKTest)
add_subdirectory(test/regExprTest)
add_subdirectory(test/chartTableTest)